test-suite/output/ErrorLocation_12774_2.v
Ltac f := simpl.
Goal Type.
f; exact 0.
Abort.
